Public export of Nexus code:   - b7e1404f2b8fa298638092ba46aaa21216f2cfbf by Olu Shiyanbade <oshiyanbade@sonatype.com>
GitOrigin-RevId: b7e1404f2b8fa298638092ba46aaa21216f2cfbf