@@ -65,7 +65,7 @@
     <nexus.version>3.69.0-SNAPSHOT</nexus.version>
     <nexus2.version>2.15.1-02</nexus2.version>
 
-    <karaf.version>4.3.9</karaf.version>
+    <karaf.version>4.4.2</karaf.version>
 
     <!-- Define the node and yarn versions used by the frontend-maven-plugin -->
     <node.version>v18.17.1</node.version>
@@ -681,64 +681,6 @@
           <artifactId>maven-release-plugin</artifactId>
           <configuration>
             <releaseProfiles>release,optimize</releaseProfiles>
-          </configuration>
-        </plugin>
-
-        <!--
-        Basic unit-test environment configuration.
-        -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.2.5</version>
-          <configuration>
-            <useSystemClassLoader>false</useSystemClassLoader>
-            <forkCount>1</forkCount>
-            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
-            <reuseForks>true</reuseForks>
-            <argLine>
-              ${surefire.maxHeap}
-              -XX:MaxDirectMemorySize=2G
-              -XX:+HeapDumpOnOutOfMemoryError
-              -XX:HeapDumpPath=${project.build.directory}/surefire-reports
-            </argLine>
-            <excludes>
-              <exclude>**/Abstract*</exclude>
-              <exclude>**/*$*</exclude>
-              <exclude>**/*Tests</exclude>
-            </excludes>
-            <groups>${it.includedGroups}</groups>
-            <excludedGroups>${it.excludedGroups}</excludedGroups>
-          </configuration>
-        </plugin>
-
-        <!--
-        Basic integration-test environment configuration.
-        -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>3.2.5</version>
-          <configuration>
-            <trimStackTrace>false</trimStackTrace>
-            <forkCount>1</forkCount>
-            <reuseForks>false</reuseForks>
-            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
-            <argLine>
-              -Xmx400M
-              -XX:MaxDirectMemorySize=2G
-              -XX:+HeapDumpOnOutOfMemoryError
-              -XX:HeapDumpPath=${project.build.directory}/failsafe-reports
-            </argLine>
-            <excludes>
-              <exclude>**/Abstract*</exclude>
-              <exclude>**/*$*</exclude>
-            </excludes>
-            <includes>
-              <include>${it.includes}</include>
-            </includes>
-            <groups>${it.includedGroups}</groups>
-            <excludedGroups>${it.excludedGroups}</excludedGroups>
           </configuration>
         </plugin>
 
@@ -1363,6 +1305,221 @@
   </build>
 
   <profiles>
+   <profile>
+      <id>surefire-jdk8</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <!--
+           Basic unit-test environment configuration.
+           -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <useSystemClassLoader>false</useSystemClassLoader>
+              <forkCount>1</forkCount>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <reuseForks>true</reuseForks>
+              <argLine>
+                ${surefire.maxHeap}
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/surefire-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+                <exclude>**/*Tests</exclude>
+              </excludes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+
+          <!--
+          Basic integration-test environment configuration.
+          -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <trimStackTrace>false</trimStackTrace>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <argLine>
+                -Xmx400M
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/failsafe-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+              </excludes>
+              <includes>
+                <include>${it.includes}</include>
+              </includes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+
+        </plugins>
+      </build>
+   </profile>
+
+   <profile>
+     <id>surefire-jdk11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <!--
+           Basic unit-test environment configuration.
+           -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <useSystemClassLoader>false</useSystemClassLoader>
+              <forkCount>1</forkCount>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <reuseForks>true</reuseForks>
+              <argLine>
+                ${surefire.maxHeap}
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/surefire-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+                <exclude>**/*Tests</exclude>
+              </excludes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+
+          <!--
+          Basic integration-test environment configuration.
+          -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <trimStackTrace>false</trimStackTrace>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <argLine>
+                -Xmx400M
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/failsafe-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+              </excludes>
+              <includes>
+                <include>${it.includes}</include>
+              </includes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+
+        </plugins>
+      </build>
+   </profile>
+
+    <profile>
+      <properties>
+        <argLine>
+          --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens=java.base/java.net=ALL-UNNAMED
+          --add-opens=java.base/java.util=ALL-UNNAMED
+        </argLine>
+      </properties>
+      <id>surefire-jdk17</id>
+      <activation>
+        <jdk>17</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <!--
+           Basic unit-test environment configuration.
+           -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <useSystemClassLoader>false</useSystemClassLoader>
+              <forkCount>1</forkCount>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <reuseForks>true</reuseForks>
+              <argLine>
+                @{argLine}
+                ${surefire.maxHeap}
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/surefire-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+                <exclude>**/*Tests</exclude>
+              </excludes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+
+          <!--
+          Basic integration-test environment configuration.
+          -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.2.5</version>
+            <configuration>
+              <trimStackTrace>false</trimStackTrace>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+              <argLine>
+                @{argLine}
+                -Xmx400M
+                -XX:MaxDirectMemorySize=2G
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=${project.build.directory}/failsafe-reports
+              </argLine>
+              <excludes>
+                <exclude>**/Abstract*</exclude>
+                <exclude>**/*$*</exclude>
+              </excludes>
+              <includes>
+                <include>${it.includes}</include>
+              </includes>
+              <groups>${it.includedGroups}</groups>
+              <excludedGroups>${it.excludedGroups}</excludedGroups>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
 
     <!--
     When this profile is used it is intended to run tests that hit the real remotes
